GETools changelog


***v1.4.0*** - FUTURE PLAN
- TODO [PHYSICS] added new physics with nHair logic
- TODO [OVERLAPPY] added Chain mode with nHair
- TODO [OVERLAPPY] added collisions UI
- TODO [OVERLAPPY] added nRigid collision logic
- TODO added non-cycle origin animation with loop mode
**********************************************


v1.3.0 - In Development
- TODO [UI] added new features to shelf buttons
- [UI] moved motion trail buttons from "Experimental" to "Motion Trail" group
- [UTILS] added button "Print Animatable Attributes"
- [UTILS] added button "Parent Shapes"
- [UTILS] added button "Select Hierarchy Transforms" (for selecting hierarchy by transforms only)
- [UTILS] added button "Save Pose To Shelf"
- [RIGGING] added button "Create Curve" (from selected objects)
- [OVERLAPPY] reworked main script
- [OVERLAPPY] separated rig creation buttons for point, aim and combo
- [OVERLAPPY] reworked aim offset UI
- [OVERLAPPY] added loop cycles in option menu
- [OVERLAPPY] moved nucleus timeScale slider to separate panel
- [OVERLAPPY] added nucleus gravity settings

v1.2.6
- added to Settings.py file default value for "checkboxEulerFilter".

v1.2.5
- [OVERLAPPY] added confirm dialog for zero particle offset.
- [UTILS] added draft annotation creation logic.
- [UI] replaced button icon change approach, now simply use Help/Change Icon for toggling icons.
- [UI] added "Options" menu with euler filter checkbox.
- [UI] moved "To Shelf" menu to the new "Options" menu.
- [UI] changed the color of the black panel to a lighter color (0.00 => 0.13).
- added connection between base class instance and sub classes.
- improved euler filter method for using after animation baking.

v1.1.0
- [CRITICAL] fixed compatibility with Maya 2025.
- [RIGGING] added "Extract Shapes" logic from blendshapes.
- [UI] added button icon change on highlight.
- [UI] added alternative secret meme icon (need to activate in Settings "useFaceIcon = True").
- improved cache evaluator detection.